delete useless code; readable console.log; change function binding type; maxlength is optional (fix angular errors); default spacer;

--- a/src/saprun-dynamic-input.css
+++ b/src/saprun-dynamic-input.css
@@ -1,25 +1,44 @@
+saprun-dynamic-input {
+    position: relative;
+    overflow: hidden;
+}
+
+
+saprun-dynamic-input > div.container {
+    display: flex;
+    width: 100px;
+    height: 30px;
+    border: solid 1px #abc;
+    border-radius: 5px;
+    background-color: #fff;
+    align-items: center;
+}
+
+saprun-dynamic-input div.spacer{
+    height: 0;
+    overflow: hidden;
+    font: inherit;
+}
+
+saprun-dynamic-input div.input-container {
+    display: inline-table;
+    height: 50%;
+}
 
 saprun-dynamic-input input {
     border: none;
     background-color: inherit;
     padding: 0;
     position: absolute;
+    font: inherit;
 }
 
 saprun-dynamic-input input:focus {
     outline: none;
 }
 
-saprun-dynamic-input {
-    display: flex;
-}
-
-saprun-dynamic-input .spacer{
-    height: 0;
-    overflow: hidden;
-}
-
-saprun-dynamic-input {
-    position: relative;
-    overflow: hidden;
+saprun-dynamic-input span.unit {
+    font: inherit;
+    height: 50%;
+    padding-left: 5px;
 }
